test/files/neg/t5689.check
t5689.scala:4: error: macro implementation has incompatible shape:
 required: (c: reflect.macros.blackbox.Context)(i: c.Expr[Double]): c.Expr[String]
 or      : (c: reflect.macros.blackbox.Context)(i: c.Tree): c.Tree
 found   : (c: reflect.macros.blackbox.Context)(i: c.Expr[Double]): c.Expr[Int]
type mismatch for return type: c.Expr[Int] does not conform to c.Expr[String]
  def returnsString(i: Double): String = macro returnsIntImpl
                                               ^
one error found
